gcc/testsuite/rust/compile/empty_path.rs
#![feature(no_core)]
#![no_core]

fn main() {
    ::;
    // { dg-error "expected identifier" "" { target *-*-* } .-1 }
}
